tests/script_runtime_errors/patch_key_exists/error.txt
Error: 
    1 | patch {"a": 1} of
    2 |   insert "a" => 2 
      |           ^ The key that is supposed to be written to already exists: a
